--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,7 @@
-algamoney.seguranca.enable-https=true
+spring.datasource.url={JDBC_DATABASE_URL_AVALIACAO}
+spring.datasource.username={JDBC_DATABASE_USERNAME_AVALIACAO}
+spring.datasource.password={JDBC_DATABASE_PASSWORD_AVALIACAO}
 
-spring.datasource.url={JDBC_DATABASE_URL}
-spring.datasource.username={JDBC_DATABASE_USERNAME}
-spring.datasource.password={JDBC_DATABASE_PASSWORD}
+avaliacao.origin-permitida=https://avaliacao-join-ui.herokuapp.com
 
-algamoney.origin-permitida=https://algamoney-angular.herokuapp.com
 
-spring.profiles.active=oauth-security
